# ChangeLog for games-emulation/retroarch
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*retroarch-0.9.6 (09 Jun 2012)

  09 Jun 2012; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.6.ebuild,
  +files/retroarch-0.9.6-build.patch, retroarch-9999.ebuild:
  Bumped. Updated build patch.

*retroarch-0.9.5 (01 Jun 2012)

  01 Jun 2012; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.5.ebuild,
  retroarch-9999.ebuild:
  Bumped. Fixed URI.

*retroarch-9999 (22 Apr 2012)

  22 Apr 2012; Michał Ziąbkowski <mziab@o2.pl> +retroarch-9999.ebuild,
  +files/retroarch-build.patch, +files/retroarch-python.patch, +metadata.xml:
  New ebuild based on the old ssnes one.
