@@ -2,19 +2,20 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=2
+EAPI=4
 
-inherit games confutils python git-2
+inherit games python git-2
 
 DESCRIPTION="Universal frontend for libretro-based emulators"
 HOMEPAGE="http://themaister.net/retroarch.html"
 SRC_URI=""
 
 EGIT_REPO_URI="git://github.com/Themaister/RetroArch.git"
+EGIT_COMMIT="v${PV}"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~x86"
 IUSE="alsa cg +dynamic +fbo ffmpeg jack netplay openal oss pulseaudio python sdl-image truetype x264rgb xml xv"
 
 RDEPEND="media-libs/libsdl[joystick]
@@ -42,7 +43,7 @@ pkg_setup() {
 }
 
 src_prepare() {
-	epatch "${FILESDIR}/${PN}-0.9.6-build.patch" \
+	epatch "${FILESDIR}/${P}-build.patch" \
 		"${FILESDIR}/${PN}-python.patch"
 
 	if use python; then
