@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*retroarch-0.9.6-r1 (24 Jun 2012)
+
+  24 Jun 2012; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.6-r1.ebuild,
+  retroarch-9999.ebuild:
+  Ported to EAPI=4.
+
 *retroarch-0.9.6 (09 Jun 2012)
 
   09 Jun 2012; Michał Ziąbkowski <mziab@o2.pl> +retroarch-0.9.6.ebuild,
